- Reminder will only trigger in the destination system